WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220961
[LFC][IFC] Incorrect inline box width with horizontal alignment
https://bugs.webkit.org/show_bug.cgi?id=220961
Summary
[LFC][IFC] Incorrect inline box width with horizontal alignment
alan
Reported
2021-01-25 19:05:04 PST
ssia
Attachments
Patch
(2.09 KB, patch)
2021-01-25 19:19 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-01-25 19:19:39 PST
Created
attachment 418365
[details]
Patch
EWS
Comment 2
2021-01-26 07:00:52 PST
Committed
r271881
: <
https://trac.webkit.org/changeset/271881
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418365
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-01-26 07:01:19 PST
<
rdar://problem/73615027
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug