[LFC][IFC] Incorrect inline box width with horizontal alignment https://bugs.webkit.org/show_bug.cgi?id=220961

Reviewed by Antti Koivisto.

While the runs are relative to the line box, and the line box has the horizontal alignment offset
the final inline boxes are expected to include the horizontal alignment.
This patch ensures alignment offset is taken into account when the inline box width is computed.

* layout/inlineformatting/InlineFormattingContextGeometry.cpp:
(WebCore::Layout::LineBoxBuilder::constructInlineLevelBoxes):


Canonical link: https://commits.webkit.org/233342@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271881 268f45cc-cd09-0410-ab3c-d52691b4dbfc